--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,9 +6,8 @@ phases:
       - npm install
   build:
     commands:
-      - npm run build
+      - npm run generate
 artifacts:
   files:
     - '**/*'
   base-directory: 'dist'
-  discard-paths: no
