--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,12 @@ logs
 .env
 .env.*
 !.env.example
+
+# VS Code
+.vscode
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
