--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxt/content": "^3.1.1",
+    "@nuxt/content": "^3.6.3",
+    "@nuxtjs/sitemap": "^7.4.3",
     "@stefanobartoletti/nuxt-social-share": "^1.2.0",
-    "nuxt": "^3.6.0",
+    "nuxt": "^3.18.1",
     "nuxt-cloudflare-analytics": "^1.0.8",
     "remark-unwrap-images": "^4.0.0",
     "vue": "^3.4.21",
